# pylint-function-analyzer

./: .gitignore  README.md  pyproject.toml
src/pylint_function_analyzer/: __init__.py  analyzer.py  checker.py  reporter.py
